# garbage_hero

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  index.html
.github/workflows/: publish.yml  rust.yml
assets/: start.build
assets/builds/: archs.build  cross.build  gate.build  pyramid.build  tower.build  wall.build
assets/kenney_input-prompts/: License.txt  Overview.html
assets/kenney_mini-characters/: License.txt  Overview.html  View Documentation.url
assets/wood-planks/: License free.txt
src/: lib.rs  main.rs
src/plugins/: camera.rs  common.rs  debug.rs  editor.rs  light.rs  map.rs  mod.rs  particles.rs  player.rs  splash.rs
src/plugins/enemies/: assets.rs  auto_turret.rs  body.rs  mod.rs  movement.rs  worm.rs
src/plugins/garbage/: body.rs  builds.rs  collected.rs  collector.rs  distribution.rs  items.rs  mod.rs  throw.rs
src/plugins/player/: assets.rs  input.rs  mod.rs  movement.rs  skills.rs  ui.rs
src/plugins/ui/: assets.rs  input_icons.rs  mod.rs
