[package]
name = "garbage_project"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_physics = ["avian3d/debug-plugin"]
debug = ["bevy_egui", "bevy-inspector-egui", "bevy/file_watcher"]
editor = [
    "debug",
    "leafwing-input-manager/egui",
    "egui_dock",
    "transform-gizmo-bevy",
    "bevy_mod_picking",
    "bevy_framepace",
]

[dependencies]
# Physics
avian3d = "0.1"
# Enum iter
strum = { version = "0.26", features = ["derive"] }
# Input map
leafwing-input-manager = "0.14"
# PRNG
rand = "0.8"
# Animation
bevy_easings = "0.14"
# errors
thiserror = "1.0"

[dependencies.bevy]
version = "0.14"

# EDITOR DEPS
[dependencies.bevy-inspector-egui]
version = "0.25"
features = ["highlight_changes"]
optional = true

[dependencies.bevy_egui]
version = "0.28"
optional = true

[dependencies.egui_dock]
version = "0.13"
optional = true

[dependencies.transform-gizmo-bevy]
version = "0.3"
optional = true

[dependencies.bevy_mod_picking]
version = "0.20"
default-features = false
features = [
    "backend_raycast",
    "backend_egui",
    "backend_sprite",
    "backend_avian",
    "highlight",
]
optional = true

[dependencies.bevy_framepace]
version = "0.17"
optional = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
