[package]
name = "garbage_project"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_physics = ["avian3d/debug-plugin"]
debug = [
    "bevy_egui",
    "bevy-inspector-egui",
    "bevy/file_watcher",
    "bevy/bevy_dev_tools",
]
debug_world = ["debug"]

[dependencies]
# Physics
avian3d = "0.1"
# Enum iter
strum = { version = "0.26", features = ["derive"] }
# Input map
leafwing-input-manager = "0.14"
# PRNG
rand = "0.8"
# errors
thiserror = "1.0"

[dependencies.bevy_mod_outline]
version = "0.8"
default-features = false

# particles
[dependencies.bevy_hanabi]
version = "0.12"
default-features = false
features = ["3d"]

[dependencies.bevy]
version = "0.14"

[dependencies.bevy-inspector-egui]
version = "0.25"
features = ["highlight_changes"]
optional = true

[dependencies.bevy_egui]
version = "0.28"
optional = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
