[package]
name = "garbage_project"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_physics = ["avian3d/debug-plugin"]
debug = [
    "bevy_egui",
    "bevy-inspector-egui",
    "bevy/file_watcher",
    "bevy/bevy_dev_tools",
]
debug_world = ["debug"]

[dependencies]
# Enum iter
strum = { version = "0.26", features = ["derive"] }
# Input map
leafwing-input-manager = "0.14"
# PRNG
rand = "0.8"
# errors
thiserror = "1.0"

# Physics
[dependencies.avian3d]
version = "0.1"
default-features = false
features = ["3d", "f32", "parry-f32", "parallel", "simd"]

[dependencies.bevy_mod_outline]
version = "0.8"
default-features = false

# particles
[dependencies.bevy_hanabi]
# version = "0.13"
git = "ssh://git@github.com/djeedai/bevy_hanabi.git"
default-features = false
features = ["3d"]

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    # "bevy_audio",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    # "bevy_picking",
    "bevy_gltf",
    "bevy_render",
    # "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    # "hdr",
    # "vorbis",
    "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgpu",
    "sysinfo_plugin",
]

[dependencies.bevy-inspector-egui]
version = "0.25"
features = ["highlight_changes"]
optional = true

[dependencies.bevy_egui]
version = "0.28"
optional = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "debuginfo"
